--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "google/apiclient": "1.1.2",
-    "phpunit/phpunit": "4.4.0"
+    "phpunit/phpunit": "4.4.0",
+    "kairos/spreadsheetreader": "0.6.0.x-dev"
   }
 }
